--- a/styles/default.css
+++ b/styles/default.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: Hiragino, sans-serif;
     transition: all .3s linear;
     border: none;
     transition: none;
@@ -10,6 +10,11 @@
 
 *::-webkit-scrollbar {
     display: none;
+}
+
+@font-face {
+    font-family: Hiragino;
+    src: url(/styles/Hiragino\ Sans\ GB\ W6.otf);
 }
 
 body {
